fixing welcome menue not showing

--- a/css/style.css
+++ b/css/style.css
@@ -672,16 +672,15 @@ footer {
 }
 
 @media screen and (min-width: 769px) {
-  .overlay {
-    z-index: 1; /* Lower than tag filters which are at 10 */
-    pointer-events: none; /* Prevent it from intercepting clicks */
+  .blog-page .overlay {
+    z-index: 1;
+    pointer-events: none;
   }
 
-  .overlay * {
-    pointer-events: auto; /* Let inner links still be clickable */
+  .blog-page .overlay * {
+    pointer-events: auto;
   }
 }
 
-.blog-page .overlay {
-  pointer-events: none;
-}
+
+
